# 251RCOSE34102

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  p1
include/Component/: cpu.h  operation.h  process.h
include/DataStructure/: fifo_queue.h  lottery_queue.h  priority_queue.h  queue_interface.h
include/Scheduler/: fcfs_scheduler.h  scheduler.h  scheduler_interface.h
src/: CMakeLists.txt  main.c
src/Component/: cpu.c  process.c
src/DataStructure/: CMakeLists.txt  fifo_queue.c  lottery_queue.c  priority_queue.c
src/Scheduler/: fcfs_scheduler.c  scheduler.c  scheduler_interface.c
